<!--
  ~ Copyright © 2016, Malyshev Vladislav,  thestrangesquirrel@gmail.com. This work is licensed under the Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License. To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-nd/3.0/ or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
  -->

<resources>
    <string name="app_name">Poshtar</string>
    <string name="version" translatable="false">1.1</string>
    <string name="email" translatable="false">thestrangesquirrel@gmail.com</string>


    <string name="new_tracking">New tracking</string>
    <string name="save_tracking">Saved tracking</string>
    <string name="loading_tracks">Loading list of tracks</string>
    <string name="package_tracking">Package tracking</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="cancel">Cancel</string>
    <string name="contin">Continue</string>
    <string name="refresh">Refresh</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="internet_status_online">Internet connected</string>
    <string name="internet_status_ofline">Internet not connecting</string>
    <string name="failed">Failed, try again later</string>
    <string name="enter_track_number">Enter the track number</string>
    <string name="track">Track</string>
    <string name="header_providers">Available tracks</string>
    <string name="save_track">Save track</string>
    <string name="stop_track">Stop track</string>
    <string name="dialog_add_description">You can add a description</string>
    <string name="change_save_track">Such tracking exists, replace?</string>
    <string name="track_number">Track №</string>
    <string name="provider">Provider</string>
    <string name="description">Description</string>

    <string name="questions">For questions, suggestions contact:</string>
    <string name="developer">Developer:</string>

    <string name="lang_title">Language</string>
    <string name="lang_dialog_title">Choose language:</string>
    <string name="lang_summary">Application language. You must restart the application to apply the changes.</string>

    <string name="clean_title">Clean tracks</string>

    <string name="not_remind">Do not remind me</string>
    <string name="rate_it">Rate it</string>
    <string name="already_rate_it">Already rate it</string>
    <string name="rate_title">Please if you have a moment of free time, rate the app. Thank you for your support.
    </string>
    <string name="write_author">Write to the author of the program: \n proposition/questions/bugs</string>

    <string name="banner_new_track" translatable="false">ca-app-pub-4415682139833620/8338431598</string>
    <string name="banner_save_track" translatable="false">ca-app-pub-4415682139833620/6722097597</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-4415682139833620~1094366399</string>
    <string name="author" translatable="false">TheSquirrel</string>
    <string name="tracking_saved">Tracking saved</string>
</resources>
