<!--
  ~ Copyright © 2016, Malyshev Vladislav,  thestrangesquirrel@gmail.com. This work is licensed under the Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License. To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-nd/3.0/ or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".HelloActivity">
    <item
            android:id="@+id/menu_newTrack"
            android:title="@string/new_tracking"/>
    <item
            android:id="@+id/menu_savedTrack"
            android:title="@string/save_tracking"/>
    <item
            android:id="@+id/menu_settings"
            android:title="@string/settings"/>
    <item
            android:id="@+id/menu_about"
            android:title="@string/about"/>
</menu>