<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="match_parent" android:layout_width="match_parent">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTrackN"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_toLeftOf="@+id/bTrack"
            android:layout_toStartOf="@+id/bTrack" android:hint="@string/enter_track_number"
            android:textColorHint="#ff7c89"
            android:singleLine="true"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track"
            android:id="@+id/bTrack"
            android:layout_alignTop="@+id/eTrackN"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_below="@+id/bTrack" android:weightSum="1"
            android:background="@drawable/frame">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="457dp"
                android:id="@+id/scrollView"
                android:paddingLeft="4dp"
                android:fillViewport="false"
                android:layout_weight="1">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textResponse"
                        android:textIsSelectable="true"/>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rateContainer"
                        android:layout_marginTop="30dp" android:layout_marginRight="7dp"
                        android:layout_marginLeft="7dp">
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_track"
                android:id="@+id/bSaveTrack"
                android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>


